--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       <script src="p5.play.js"></script>
 
       <script src="sketch.js"></script>
+      <script src="paper.js"></script>
+      <script src="chain.js"></script>
+      <script src="ground.js"></script>
+
+
+
 
     </head>
     <body>
